force-app/main/default/objects/HereSettings__c/HereSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Here Settings</label>
</CustomObject>