force-app/main/default/objects/HereSettings__c/fields/DistanceLimit__c.field-meta.xml
<CustomField>
    <fullName>DistanceLimit__c</fullName>
    <defaultValue>50</defaultValue>
    <label>Distance Limit</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>