force-app/main/default/objects/HereSettings__c/fields/JSApiKey__c.field-meta.xml
<CustomField>
    <fullName>JSApiKey__c</fullName>
    <defaultValue>&quot;vplzTXKRTqxx4HO0Atb2mGiOkJZname5zIGNvaHKJ5A&quot;</defaultValue>
    <label>JSApiKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>