force-app/main/default/objects/HereSettings__c/fields/TokenExpires__c.field-meta.xml
<CustomField>
    <fullName>TokenExpires__c</fullName>
    <label>Token Expires</label>
    <type>DateTime</type>
</CustomField>