force-app/main/default/objects/HereSettings__c/fields/TokenPart1__c.field-meta.xml
<CustomField>
    <fullName>TokenPart1__c</fullName>
    <label>Token Part1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>