force-app/main/default/objects/HereSettings__c/fields/TokenPart2__c.field-meta.xml
<CustomField>
    <fullName>TokenPart2__c</fullName>
    <label>Token Part2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>