force-app/main/default/objects/HereSettings__c/fields/TokenPart3__c.field-meta.xml
<CustomField>
    <fullName>TokenPart3__c</fullName>
    <label>Token Part3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>